pushing all resources along with major changes in css and addition of further sections, current footer is commented

--- a/index.html
+++ b/index.html
@@ -107,6 +107,102 @@
                 </div>
             </div>
         </div>
+        <div class="card-list">
+            <div class="Certifications-head">
+                <h1>Certifications</h1>
+            </div>
+            <div class="card">
+                <h1>Data Science with Python</h1>
+                <h2>Simplilearn<br>19-Aug-2024</h2>
+            </div>
+            <div class="card">
+                <h1>Essentials of Generative AI, Prompt Engineering and ChatGPT</h1>
+                <h2>Simplilearn<br>27-May-2024</h2>
+            </div>
+            <div class="card">
+                <h1>Python for Data Science(PY0101EN, provided by IBM)</h1>
+                <h2>Simplilearn<br>17-May-2024</h2>
+            </div>
+            <div class="card">
+                <h1>HTML Tranning certification</h1>
+                <h2>Spoken Tutorial Project<br>October-2023</h2>
+            </div>
+            <div class="card">
+                <h1>Bootstrap(Self-Paced)</h1>
+                <h2>LOG2BASE2<br>21-June-2023</h2>
+            </div>
+            <div class="card">
+                <h1>Fundamental of Python and Analytics with application in Machine Learning</h1>
+                <h2>YBI Foundation<br>Dec 2022</h2>
+            </div>
+        </div>
+
+        <div class="skills">
+            <h1>Skills</h1>
+            <div class="skills-grid">
+                <div class="skill-card">
+                    <img src="src/icons/python-logo.png" alt="Python">
+                    <p>Python</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/corejava-logo.png" alt="Core Java">
+                    <p>Core Java</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/c-logo.png" alt="C Programming">
+                    <p>C Programming</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/sql-logo.png" alt="SQL">
+                    <p>SQL</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/opencv-logo.png" alt="OpenCV">
+                    <p>OpenCV</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/numpy-logo.png" alt="NumPy">
+                    <p>NumPy</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/pandas-logo.png" alt="Pandas">
+                    <p>Pandas</p>
+                </div>
+                <!-- <div class="skill-card">
+                    <img src="src/icons/yolov8-logo.png" alt="YOLOv8">
+                    <p>YOLOv8</p>
+                </div> -->
+                <div class="skill-card">
+                    <img src="src/icons/html-logo.png" alt="HTML">
+                    <p>HTML</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/css-logo.png" alt="CSS">
+                    <p>CSS</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/bootstrap-logo.png" alt="Bootstrap">
+                    <p>Bootstrap</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/javascript-logo.png" alt="JavaScript">
+                    <p>JavaScript</p>
+                </div>
+                <div class="skill-card">
+                    <img src="src/icons/flask-logo.png" alt="Flask">
+                    <p>Flask</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <!-- <footer>
+        <ul class="contact">
+            <li><a href="#"><img src="src/icons/github-logo.png" alt="github-logo"></a></li>
+            <li><a href="#"><img src="src/icons/linkedin-logo.png" alt="linkedin-logo"></a></li>
+            <li><a href="#"><img src="src/icons/discord-logo.png" alt="discord-logo"></a></li>
+            <li><a href="#"><img src="src/icons/instagram-logo.png" alt="instagram-logo"></a></li>
+        </ul>
+        <h1>Thank You for Visiting!!!</h1>
+    </footer> -->
 </body>
 </html>
